# sample_pybind_meson

./: README.md  meson.build
python/: example.cpp  meson.build
python/test/: meson.build  test.py
subprojects/: onqtam-doctest.wrap
test/: TestMain.cpp  meson.build
